# Companies101Cpp

./: CMakeLists.txt  Makefile  Makemakefile  readme.md  sample.json
include/: Company.hpp  Cut.hpp  Department.hpp  Employee.hpp  Equal.hpp  FlatCompany.hpp  Host.hpp  MutateVisitor.hpp  NestedCompany.hpp  Operations.hpp  Persistence.hpp  Print.hpp  Total.hpp  Visitor.hpp
src/: Company.cpp  Cut.cpp  Department.cpp  Employee.cpp  Equal.cpp  FlatCompany.cpp  MutateVisitor.cpp  NestedCompany.cpp  Operations.cpp  Persistence.cpp  Print.cpp  Total.cpp  Visitor.cpp  main.cpp  test.cpp
